--- a/about-us.html
+++ b/about-us.html
@@ -205,7 +205,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about-us.html">About Us</a></li>
                 <li><a href="students.html">Students</a></li>
                 <li><a href="staff.html">Staff</a></li>
